# data-flow

./: README.md  docker-compose.yaml
integration-gitlab/: pyproject.toml
integration-jira/: pyproject.toml
migrations/clickhouse/: 001__init_data_lineage_table.down.sql  001__init_data_lineage_table.up.sql  002__init_test_tables.down.sql  002__init_test_tables.up.sql
migrations/postgres/: 001__init_app_table.down.sql  001__init_app_table.up.sql
scripts/data-lineage-bench/: .gitignore  .prettierrc.json  README.md  app.html  app.tsx  bun.lockb  clean.ts  index.ts  package-lock.json  package.json
scripts/data-lineage-bench/results-archive/2024-11-25_14-11-09/: app.js
