[tool.poetry]
name = "integration-jira"
version = "0.1.0"
description = ""
authors = ["CNine <cnine229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pendulum = "^3.0.0"
polars = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
